welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:26: error: not found: value l
  if(getX()!=l-1 && getY()!=h-1){return true}
             ^ZigZag:26: error: not found: value h
  if(getX()!=l-1 && getY()!=h-1){return true}
                            ^